--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,163 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+*{
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+#link{
+    text-decoration: none;
+}
+#menu{
+    color: black;
+    text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/* Products page ----------------------------------------------------------------- */
+.card{
+    width: 85%;
+    height: 430px;
+    margin: 20px;
+    padding: 20px 10px;
+    border: 1px solid rgb(211, 211, 211);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
+    color: black;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.product-image{
+    width: 250px;
+    height: 300px;
+    border-radius: 10px;
+    transition: 0.3s ease-in-out;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.product-image:hover{
+    transform: scale(0.9);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.about-product{
+    width: 100%;
+    padding: 10px 20px;
+    text-decoration: underline;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.product-description-page{
+    padding: 50px;
+    text-align: center;
+}
+
+.product{
+    display: flex;
+    border-radius: 20px;
+    padding: 30px;
+}
+
+.img{
+    border-radius: 10px;
+    width: 320px;
+    height: 350px;
+    border: 1px solid black;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.description{
+    text-align: left;
+    padding: 0px 30px;
+    border-radius: 10px;
+    border: 1px solid black;
+    margin-left: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    min-width: 0px;
+}
+.description h2, p{
+    margin: 10px 0px;
+}
+
+.pricing{
+    display: flex;
+    width: 100%;
+}
+
+.pricing h4{
+    width: fit-content;
+    margin-right: 10px;
+    height: fit-content;
+    border: 1px solid black;
+    padding: 10px 10px;
+    border-radius: 4px;
+    background-color: orange;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.rating{
+    width: fit-content;
+    background-color: orange;
+    display: flex;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.rating h4{
+    border: none;
+    box-shadow: none;
+}
+
+@media only screen and (max-width: 985px) {
+    .img{
+        border: none;
+        box-shadow: none;
+    }
+    .pricing{
+        flex-direction: column;
+    }
+    .pricing h4{
+        margin-top: 10px;
+        width: 95%;
+    }
+    .rating{
+        margin-top: 10px;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 881px){
+    .product{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    .pricing{
+        flex-direction: column;
+    }
+    .pricing h4{
+        margin-top: 10px;
+        width: 93%;
+    }
+    .rating{
+        margin-top: 10px;
+        width: 100%;
+    }
+    .img{
+        width: 100%;
+        
+    }
+    .product-description-page{
+        padding: 50px 0px;
+        height: 450px; 
+    }
+    .description{
+        width: 100%;
+        padding: 0px;
+        margin: 0;
+        border: none;
+        box-shadow: none;
+    }
 }
