--- a/styles/globals.css
+++ b/styles/globals.css
@@ -161,3 +161,29 @@
         box-shadow: none;
     }
 }
+
+/* Loading animation-------------------------------------------------------------------- */
+.progress .color{
+    position: absolute;
+    background-color: black;
+    width: 0px;
+    height: 4px;
+    animation: progres 3s infinite linear;    
+}
+@keyframes progres{
+    0%{
+      width: 0%;
+    }
+    25%{
+        width: 50%;
+    }
+    50%{
+        width: 75%;
+    }
+    75%{
+        width: 85%;
+    }
+    100%{
+        width: 100%;
+    }
+};
