--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,21 @@
     padding: 0;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 0px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0);
+  outline: 1px solid rgb(180, 180, 180);
+}
+
 #link{
     text-decoration: none;
 }
@@ -27,6 +42,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
     color: black;
+    background-color: white;
 }
 
 .product-image{
@@ -161,6 +177,17 @@
         box-shadow: none;
     }
 }
+
+
+.related-products{
+    border: 1px solid black;
+    border-radius: 20px;
+    display: flex;
+    overflow-x: scroll;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: black;
+}
+
 
 /* Loading animation-------------------------------------------------------------------- */
 .progress .color{
