--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,11 +49,12 @@
     width: 250px;
     height: 300px;
     border-radius: 10px;
+    transform: scale(0.9);
     transition: 0.3s ease-in-out;
 }
 
 .product-image:hover{
-    transform: scale(0.9);
+    transform: scale(1);
 }
 
 .about-product{
@@ -124,6 +125,10 @@
     box-shadow: none;
 }
 
+.search-bar{
+    width: 40%;
+}
+
 @media only screen and (max-width: 985px) {
     .img{
         border: none;
@@ -175,6 +180,12 @@
         margin: 0;
         border: none;
         box-shadow: none;
+    }
+}
+
+@media only screen and (max-width: 680px) {
+    .search-bar{
+        width: 90%;
     }
 }
 
