--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@
     text-decoration: none;
 }
 
+#menu-btn{
+    border-color: aliceblue;
+}
+
 /* Products page ----------------------------------------------------------------- */
 .card{
     width: 85%;
