--- a/styles/globals.css
+++ b/styles/globals.css
@@ -243,7 +243,72 @@
     margin-top: 30px;
     height: fit-content;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: rgb(245, 245, 245);
 }
 .cart-item{
-    background-color: rebeccapurple;
+    border: 1px solid rgb(80, 80, 80);
+    border-radius: 6px;
+    height: fit-content;
+    padding: 10px;
+    margin: 20px 0px;
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.cart-item-image{
+    width: 100px;
+    height: 130px;
+}
+.divider{
+    width: 2px;
+    height: auto;
+    background-color: rgb(199, 199, 199);
+    border-radius: 10px;
+    margin: 0px 20px;
+}
+.title{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+}
+.quantity-inc-dec{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.inc-dec{
+    background-color: black;
+    color: white;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.quantity{
+    padding: 0px 15px;
+    border: 1px solid black;
+    margin: 0px 5px;
+    border-radius: 2px;
+}
+.price{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.delete{
+    display: flex;
+    height: auto;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
